--- a/app/src/main/res/layout/item_pokemon.xml
+++ b/app/src/main/res/layout/item_pokemon.xml
@@ -12,19 +12,28 @@
         android:layout_height="70dp"
         android:contentDescription="@string/imagem_do_pokemon"/>
 
-    <TextView
-        android:id="@+id/txtPokemonNumber"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="#1"
-        android:layout_marginStart="16dp"/>
+        android:orientation="vertical"
+        android:padding="5dp">
 
-    <TextView
-        android:id="@+id/txtPokemonName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Bulbasaur"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:layout_marginStart="16dp"/>
+        <TextView
+            android:id="@+id/txtPokemonName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Bulbasaur"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_marginStart="16dp"/>
+
+        <TextView
+            android:id="@+id/txtPokemonNumber"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="#1"
+            android:layout_marginStart="16dp"/>
+
+    </LinearLayout>
+
 </LinearLayout>
