--- a/app/src/main/res/values/splash.xml
+++ b/app/src/main/res/values/splash.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+    <style name="Theme.App.Splash" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="windowSplashScreenBackground">@color/white</item>
         <item name="windowSplashScreenAnimatedIcon">@drawable/pokedex_ic</item>
-        <item name="postSplashScreenTheme">@style/Base.Theme.Pokedex</item>
+        <item name="postSplashScreenTheme">@style/Theme.Pokedex</item>
     </style>
 </resources>
