--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,16 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     app:startDestination="@id/splashFragment">
 
     <fragment
         android:id="@+id/splashFragment"
         android:name="com.example.pokedex.presentation.splash.SplashFragment"
-        android:label="Splash" />
+        android:label="Splash"
+        tools:layout="@layout/fragment_splash">
+
+        <action
+            android:id="@+id/action_splashFragment_to_mainFragment"
+            app:destination="@id/mainFragment" />
+
+    </fragment>
 
     <fragment
-        android:id="@+id/pokemonListFragment"
-        android:name="com.example.pokedex.presentation.list.PokemonListFragment"
-        android:label="Pokemons" />
+        android:id="@+id/mainFragment"
+        android:name="com.example.pokedex.presentation.main.MainFragment"
+        tools:layout="@layout/fragment_main">
+        <action
+            android:id="@+id/action_mainFragment_to_detailFragment"
+            app:destination="@id/detailFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/detailFragment"
+        android:name="com.example.pokedex.presentation.detail.DetailFragment"
+        tools:layout="@layout/fragment_detail">
+
+        <argument
+            android:name="name"
+            app:argType="string" />
+
+        <argument
+            android:name="number"
+            app:argType="integer" />
+
+        <argument
+            android:name="imageUrl"
+            app:argType="string" />
+
+    </fragment>
+
 </navigation>
