--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -64,6 +64,7 @@
                 android:id="@+id/cardStats"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:elevation="50dp"
                 app:cardCornerRadius="12dp"
                 app:cardElevation="4dp"
                 android:layout_marginTop="16dp">
@@ -113,6 +114,16 @@
                         android:layout_marginTop="4dp"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnFavorite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/btn_favorite"
+                android:text="Adicionar aos favoritos"
+                android:textColor="@android:color/white"/>
+
 
         </LinearLayout>
 
